--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="wrapper">
+        <div id="header">
+            <h1>
+                Box Modell gyakorlás
+            </h1>
+    </div>
+        <div class="main">
+            <div class="oszlop2"><img src="./img/1.jpg" alt=""></div>
+            <div class="oszlop2"><img src="./img/2.jpg" alt=""></div>
+            <div class="clear"></div>
+        </div>
+        <div id="footer"></div>
+    </div>
 </body>
 </html>
