--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             <div class="oszlop2"><img src="./img/1.jpg" alt=""></div>
             <div class="oszlop2"><img src="./img/2.jpg" alt=""></div>
             <div class="clear"></div>
+            <div class="oszlop4"><img src="img/1.jpg" alt=""></div>
+            <div class="oszlop4"><img src="img/2.jpg" alt=""></div>
+            <div class="oszlop4"><img src="img/3.jpg" alt=""></div>
+            <div class="oszlop4"><img src="img/4.jpg" alt=""></div>
+
         </div>
         <div id="footer"></div>
     </div>
