--- a/index.html
+++ b/index.html
@@ -15,16 +15,22 @@
             </h1>
     </div>
         <div class="main">
-            <div class="oszlop2"><img src="./img/1.jpg" alt=""></div>
-            <div class="oszlop2"><img src="./img/2.jpg" alt=""></div>
+            <div class="oszlop2"><img src="./img/1.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi voluptas doloribus assumenda nostrum saepe consequuntur minus enim recusandae, delectus fugiat minima cupiditate atque iure voluptatum voluptate natus magni odio laborum.</p></div>
+            <div class="oszlop2"><img src="./img/2.jpg" alt=""><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit dolor delectus neque alias, sit esse fuga atque nobis expedita nam. Non quae, autem ratione quos neque sit officiis quidem voluptatum.</p></div>
             <div class="clear"></div>
-            <div class="oszlop4"><img src="img/1.jpg" alt=""></div>
-            <div class="oszlop4"><img src="img/2.jpg" alt=""></div>
-            <div class="oszlop4"><img src="img/3.jpg" alt=""></div>
-            <div class="oszlop4"><img src="img/4.jpg" alt=""></div>
+            <div class="oszlop4"><img src="img/1.jpg" alt=""><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, aliquam.</p></div>
+            <div class="oszlop4"><img src="img/2.jpg" alt=""><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, aliquam.</p></div>
+            <div class="oszlop4"><img src="img/3.jpg" alt=""><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, aliquam.</p></div>
+            <div class="oszlop4"><img src="img/4.jpg" alt=""><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, aliquam.</p></div>
 
         </div>
-        <div id="footer"></div>
+        <div class="clear"></div>
+        <div id="footer">
+            <p>
+                &copy; 2022 Készítette: MÁ
+            </p>
+        </div>
     </div>
 </body>
 </html>
